refactor: 쿼리 개선
- batch insert로 처리
- 카테고리별 예산 합계 조회 최적화
- 일정한 기간의 고정 지출 조회 최적화
- 한 달치 트랜잭션 조회 최적화